# django_hw

./: .gitignore  pyproject.toml
hw_project/: .env  db.sqlite3
hw_project/hw_project/: settings.py  urls.py
hw_project/quotes/: forms.py  models.py  urls.py  utils.py  views.py
hw_project/quotes/migrations/: 0001_initial.py
hw_project/quotes/static/quotes/: main.css  main_style.css
hw_project/quotes/templates/quotes/: add_author.html  add_quote.html  author_detail.html  base.html  index.html
hw_project/quotes/templatetags/: extract.py
hw_project/users/: forms.py  urls.py  views.py
hw_project/users/templates/users/: logout.html  password_reset_done.html  register.html  signin.html
hw_project/utils/: migration.py
