[tool.poetry]
name = "hw-django"
version = "0.1.0"
description = ""
authors = ["serhiikhkr <05hello.world11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
pymongo = "^4.6.0"
bson = "^0.5.10"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
